[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/scirtp/ingameUI.gd" type="Script" id=1]
[ext_resource path="res://assets/sonidos/WIAN.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/ohter/ui.tres" type="Theme" id=3]
[ext_resource path="res://assets/texturs/menu/menu.png" type="Texture" id=4]
[ext_resource path="res://assets/texturs/menu/contunue.png" type="Texture" id=5]
[ext_resource path="res://assets/texturs/menu/again.png" type="Texture" id=6]

[node name="uiRoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="1goals" type="ProgressBar" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 0.183
margin_left = -177.0
margin_top = 20.0
margin_right = -69.0
margin_bottom = 0.199989
max_value = 10.0
step = 1.0

[node name="2goals" type="ProgressBar" parent="."]
anchor_bottom = 0.185
margin_left = 31.0
margin_top = 23.0
margin_right = 183.0
max_value = 10.0
step = 1.0

[node name="AcceptDialog" type="AcceptDialog" parent="."]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 431.0
margin_top = 283.0
margin_right = -401.0
margin_bottom = -230.0
window_title = "error"
dialog_text = "game over"

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.455
anchor_right = 0.5
anchor_bottom = 0.455
margin_left = -392.0
margin_top = -135.0
margin_right = -95.0
window_title = "you win"

[node name="RichTextLabel" type="RichTextLabel" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2.0
margin_bottom = -43.0
text = "game over"

[node name="goMenu" type="Button" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 51.0
margin_right = -194.0
margin_bottom = -8.0
rect_pivot_offset = Vector2( -321, -73 )
icon = ExtResource( 4 )
expand_icon = true

[node name="restartGame" type="Button" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 102.0
margin_top = 54.0
margin_right = -108.0
margin_bottom = -11.0
rect_pivot_offset = Vector2( -321, -73 )
icon = ExtResource( 6 )
expand_icon = true

[node name="continue" type="Button" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 194.0
margin_top = 54.0
margin_right = -14.0
margin_bottom = -11.0
rect_pivot_offset = Vector2( -321, -73 )
icon = ExtResource( 5 )
expand_icon = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 10.0

[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
[connection signal="pressed" from="WindowDialog/goMenu" to="." method="_on_goMenu_pressed"]
[connection signal="pressed" from="WindowDialog/restartGame" to="." method="_on_restartGame_pressed"]
[connection signal="pressed" from="WindowDialog/continue" to="." method="_on_continue_pressed"]
